syntax = "proto3";

option java_multiple_files = true;
option java_package = "src.main.java.task.grpc.service";

message WebResourceRequest {
    string webResource = 1;
}

message WebResourceInfo {
    int64 time = 1;
    int32 code = 2;
}

service WebResourceInfoService {
    rpc getWebResourceInfo (WebResourceRequest) returns (WebResourceInfo);
}

